--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"svelte": "^3.46.0",
 		"svelte-check": "^2.7.1",
 		"typescript": "^4.7.4",
-		"vite": "^3.0.8"
+		"vite": "^3.0.8",
+		"vite-imagetools": "^3.4.0-next.7"
 	},
 	"type": "module",
 	"dependencies": {
